On Progress completing clearance details

--- a/client/layout.html
+++ b/client/layout.html
@@ -36,7 +36,7 @@
     Profile
   </a>
 
-  <a href="{{pathFor 'studentProfile'}}" class="item item-icon-left" data-ion-menu-close>
+  <a href="{{pathFor 'tabs.one'}}" class="item item-icon-left" data-ion-menu-close>
     <i class="icon ion-log-out"></i>
     Clearance
   </a>
